tests/ui/lint/snapshots/manual_is_empty_string_receiver.snap
---
source: tests/ui/lint/mod.rs
---
  ● Length comparison can use `is_empty()`
   ╭─[test.lis:4:11]
 3 │   let s = "hello"
 4 │   let _ = s.length() == 0
   ·           ───────┬───────
   ·                  ╰── can be simpler
 5 │ }
   ╰────
  help: Simplify to `s.is_empty()` · code: [lint.manual_is_empty]
