tests/ui/lint/snapshots/manual_is_empty_zero_on_left.snap
---
source: tests/ui/lint/mod.rs
---
  ● Length comparison can use `is_empty()`
   ╭─[test.lis:4:11]
 3 │   let xs = [1, 2, 3]
 4 │   let _ = 0 == xs.length()
   ·           ────────┬───────
   ·                   ╰── can be simpler
 5 │ }
   ╰────
  help: Simplify to `xs.is_empty()` · code: [lint.manual_is_empty]
