tests/ui/lint/snapshots/manual_map_or_composite_literal_default_lazy.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `map_or`
   ╭─[test.lis:8:3]
 7 │   let o: Option<int> = Some(1)
 8 │   match o {
   ·   ──┬──
   ·     ╰── can be simpler
 9 │     Some(v) => [v],
   ╰────
  help: Replace this `match` with `.map_or_else(...)` · code: [lint.manual_map_or]
