tests/ui/lint/snapshots/manual_map_or_effectful_default_option.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `map_or`
   ╭─[test.lis:8:11]
 7 │   let o: Option<int> = Some(1)
 8 │   let _ = match o {
   ·           ──┬──
   ·             ╰── can be simpler
 9 │     Some(v) => v + 1,
   ╰────
  help: Replace this `match` with `.map_or_else(...)` · code: [lint.manual_map_or]
