tests/ui/lint/snapshots/manual_map_or_option.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `map_or`
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = match o {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     Some(v) => v + 1,
   ╰────
  help: Replace this `match` with `.map_or(...)` · code: [lint.manual_map_or]
