tests/ui/lint/snapshots/manual_map_or_panicking_default_lazy.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `map_or`
   ╭─[test.lis:4:3]
 3 │   let o: Option<int> = Some(1)
 4 │   match o {
   ·   ──┬──
   ·     ╰── can be simpler
 5 │     Some(v) => v + 1,
   ╰────
  help: Replace this `match` with `.map_or_else(...)` · code: [lint.manual_map_or]
