tests/ui/lint/snapshots/manual_map_or_result.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `map_or`
   ╭─[test.lis:4:11]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = match r {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     Ok(v) => v * 2,
   ╰────
  help: Replace this `match` with `.map_or(...)` · code: [lint.manual_map_or]
