tests/ui/lint/snapshots/manual_map_or_reversed_arms.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `map_or`
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = match o {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     None => 0,
   ╰────
  help: Replace this `match` with `.map_or(...)` · code: [lint.manual_map_or]
